# vf2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: builder.rs  graph.rs  isomorphism.rs  iter.rs  lib.rs  petgraph.rs  state.rs
tests/: isomorphisms.rs
