[package]
name = "vf2"
authors = ["Owen Troke-Billard"]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VF2 subgraph isomorphism algorithm in Rust."
repository = "https://github.com/OwenTrokeBillard/vf2"
readme = "README.md"

[features]
default = ["petgraph"]
petgraph = ["dep:petgraph"]

[dependencies]
petgraph = { version = "0.6", optional = true, default-features = false }
